HashMap can't be used with std::unique_ptr as value when it has a custom deleter https://bugs.webkit.org/show_bug.cgi?id=128250

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2014-02-05
Reviewed by Darin Adler.

The problem is that the HashMap is using a unique_ptr with the
default deleter, so that when trying to move the unique_ptr the
deleters don't match.

* wtf/HashTraits.h: Add the deleter also in the template
definitation of the parent class for the HashTraits<std::unique_ptr<T, Deleter>>

Canonical link: https://commits.webkit.org/146259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163460 268f45cc-cd09-0410-ab3c-d52691b4dbfc